app/src/main/java/com/example/dagger2_api_login/contract/AppConstants.java
package com.example.dagger2_api_login.contract;

public class AppConstants {

    // api
    public static final String BASE_POST_API_URL = "https://ego-local-252402.appspot.com";
    public static final String BASE_GET_API_URL = "" ;

    public static final String COMMON_PREF_NAME = "ETRANS_PREF";
    public static final String COMMON_ETRANS_TOKEN = "DOBODY6969";

    public static final int TRIP_STATUS_64 = 64;
    public static final int TRIP_STATUS_65 = 65;
    public static final int TRIP_STATUS_66 = 66;
    public static final int TRIP_STATUS_67 = 67;
    public static final int TRIP_STATUS_68 = 68;
    public static final int TRIP_STATUS_69 = 69;

    public static final long DURATION_DELAY_BEFORE_WORKING_2 = 2;

    //error
    public static final String user_login_other_device = "USR_ERROR_000000000";

    public static final String KEY_HISTORY_DETAIL_TRIP_ID = "tripPackageId";
    public static final String KEY_HISTORY_ratingTrip = "ratingTrip";

    public static final String KEY_FIREBASE_SERVICE_NOTIFICATION_CODE = "notificationCode";
    public static final String KEY_FIREBASE_SERVICE_NOTIFICATION_CONTENT = "notificationContent";

    public static final String COMMON_TRIP_CODE_KO_TIM_THAY_CHUYEN_NOTIFICATION = "210";
    public static final String COMMON_TRIP_CODE_NHAN_CHUYEN_NOTIFICATION = "212";
    public static final String COMMON_TRIP_CODE_HUY_CHUYEN_NOTIFICATION = "214";
    public static final String COMMON_TRIP_CODE_BAT_DAU_CHUYEN_NOTIFICATION = "215";
    public static final String COMMON_TRIP_CODE_KET_THUC_CHUYEN_NOTIFICATION = "216";
    public static final String COMMON_TRIP_CODE_THANH_TOAN_THANH_CONG_NOTIFICATION = "217";
    public static final String KEY_FIREBASE_SERVICE_TRIP_ID = "objectId";

}
